# 41068_RS1

./: README.md  ideation.txt  testfile.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.sh  package.sh
install/testing_ground/lib/testing_ground/: test_node
install/testing_ground/share/testing_ground/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/testing_ground/share/testing_ground/cmake/: testing_groundConfig.cmake
log/: latest_build
pyrosens_heat/: CMakeLists.txt  README.md
pyrosens_heat/include/pyrosens_heat/: mapperNode.hpp  sensorNode.hpp
pyrosens_heat/rviz/: heatmap_test.rviz
pyrosens_heat/src/: main_mapper.cpp  main_sensor.cpp  mapperNode.cpp  sensorNode.cpp
systemDev/: CMakeLists.txt  package.xml
systemDev/src/: test_node.cpp
testing_ground/: CMakeLists.txt
testing_ground/src/: test_node.cpp
